--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -6,15 +6,26 @@ on:
       - main
 
 jobs:
-  build_and_deploy:
+  build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 🧭 Checkout do código
-        uses: actions/checkout@v3
+    - name: ⬇️ Checkout do código
+      uses: actions/checkout@v3
 
-      - name: 🔧 Instalar Firebase CLI
-        run: npm install -g firebase-tools
+    - name: 🖥️ Instalar Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
 
-      - name: 🚀 Fazer Deploy no Firebase Hosting
-        run: firebase deploy --token ${{ secrets.FIREBASE_DEPLOY_TOKEN }}
+    - name: ⚡ Instalar Firebase CLI
+      run: npm install -g firebase-tools
+
+    - name: 🔧 Verificar Firebase CLI
+      run: firebase --version
+
+    - name: 📂 Listar arquivos para debug
+      run: ls -R
+
+    - name: 🚀 Fazer Deploy no Firebase Hosting
+      run: firebase deploy --token ${{ secrets.FIREBASE_DEPLOY_TOKEN }} --project martfleet-firebase
