--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -8,18 +8,20 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    env:
+      FIREBASE_TOKEN: ${{ secrets.FIREBASE_DEPLOY_TOKEN }}  # Usa o token seguro do GitHub Secrets
 
     steps:
-    - name: ⬇️ Checkout do código
-      uses: actions/checkout@v3
+      - name: ⬇️ Checkout do código
+        uses: actions/checkout@v3
 
-    - name: 🖥️ Instalar Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20'
+      - name: 🖥️ Instalar Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
-    - name: ⚡ Instalar Firebase CLI
-      run: npm install -g firebase-tools
+      - name: ⚡ Instalar Firebase CLI
+        run: npm install -g firebase-tools
 
-    - name: 🚀 Fazer Deploy no Firebase Hosting
-      run: firebase deploy --token ${{ secrets.FIREBASE_DEPLOY_TOKEN }} --project martfleet-firebase
+      - name: 🚀 Fazer Deploy no Firebase Hosting
+        run: firebase deploy --token "$FIREBASE_TOKEN" --project martfleet-firebase --only hosting
