--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,7 @@
       "**/node_modules/**"
     ],
     "rewrites": [
-      { "source": "**", "destination": "/public/templates/index.html" }
+      { "source": "**", "destination": "/templates/index.html" }
     ]
   }
 }
